--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,10 @@ Source: sunvox
 Section: non-free/sound
 Priority: optional
 Maintainer: James Lu <james@overdrivenetworks.com>
-Build-Depends: debhelper-compat (= 12)
+Build-Depends: debhelper-compat (= 12),
+               libasound2 (>= 1.0.16),
+               libsdl2-2.0-0 (>= 2.0.10),
+               libx11-6
 Standards-Version: 4.4.0
 Homepage: https://www.warmplace.ru/soft/sunvox/
 Vcs-Browser: https://github.com/utopia-repository/sunvox-deb
